added voc games section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         background-color: white;
         transition: background-color 0.3s;
         font-size: large; /* Responsive font size for links */
+        width:100%;
     }
 
     .link:hover {
@@ -84,9 +85,16 @@
     </div>
     <hr>
     <div class="section" id="section2">
-        <h2>寫作練習</h2>
+        <h2>寫作訓練</h2>
         <a href="https://ryolutw.github.io/TLA-student/?authuser=0" class="link">翻譯練習</a><br>
         <a href="https://ryolutw.github.io/Writing-Assistant/" class="link">寫作練習</a><br>
+       
+    </div>
+    <hr>
+    <div class="section" id="section2">
+        <h2>單字遊戲</h2>
+        <a href="https://ryolutw.github.io/codenameWeb/" class="link">機密代號</a><br>
+        <a href="https://ryolutw.github.io/anomia-voc/" class="link">字字轉跡</a><br>
        
     </div>
 
